--- a/Forms.html
+++ b/Forms.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <form action="" class="one">
+  <form>
     <input type="radio">
     <label for="">HTML</label>
     <input type="checkbox">
